Update 한글인코딩.md - 성능 테스트 다시 해야함

--- a/etc/encoding/한글인코딩.md
+++ b/etc/encoding/한글인코딩.md
@@ -1,5 +1,18 @@
 # 한글 인코딩
 
+SMS 나눠 보내기 기능을 구현해야했다. 솔루션에서 정해놓은 바이트 내로 DB에 저장해야 정상적으로 메세지가 보내진다. 따라서 정확한 바이트 수를 계산하는게 필요했다. 따라서 문자열을 바이트코드로 인코딩했다.
+
+```java
+String smsCn = "SMS 내용";
+int smsCnLength = smsCn.getBytes("MS949").length;
+```
+
+java의 `getBytes()` 메소드를 이용하면 문자열이 바이트 배열로 변환된다. 이를 이용하여 다른 인코딩으로 변환하는 것이 가능한데, 지금은 몇 바이트인지만 알아내면 되기 때문에 배열의 길이를 사용했다. 이를 이용하여 전송 가능한 문자인지 확인 할 수 있었다.
+
+솔루션에서 제공하는 건당 제한이 너무 작아 원하는 만큼 메세지를 전송 할 수 없었다. 따라서 내용이 길 경우 SMS를 나눠보내기로 했다.
+
+간단히 생각하면 문자열을 바이트로 변환하여 원하는 길이만큼 자르면 된다고 생각할 수 있지만, 1바이트가 넘는
+
 ## 히스토리
 
 ### 한글 조합형
